# chair

app/: package-lock.json  package.json
app/src/: App.css  App.tsx  ScriptsContext.tsx
app/src/components/: CodeBlock.tsx  JsonBlock.tsx  LeftPanel.tsx  RightPanel.tsx  Toolbar.tsx
chatbot/: function_agent.py  function_calling_agent.py  functions.py  pyproject.toml
extension/: background.js  content.js  manifest.json  popup.html  popup.js  recording_screen.js
extension2/: background.js  manifest.json  popup.html  popup.js
server/: .gitignore  Procfile  README.md  main.py  main_test.py  pyproject.toml  requirements.txt
server/.ebextensions/: 01_packages.config  config.yml
server/chair/: pyvenv.cfg
server/code_execution/: Sandbox.py
server/db/: db.py
server/llm/: api_client.py  llm_utils.py  parse_utils.py  prompts.py
server/llm/models/: gemini.py
server/lm/: api.py  constants.py  lm_utils.py  parse_code_output.py  tts.py
server/lm/models/: gemini.py  gpt.py
server/parsed_scripts/authenticate_with_instagram/: config.json  script.py
server/parsed_scripts/hello_world/: config.json  script.py
