[tool.poetry]
name = "chair-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT Lisence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
google-generativeai = "^0.7.2"
dendrite-sdk = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
